[package]
name = "s4pi_reforged"
version = "0.1.0"
edition = "2021"

[dependencies]
binrw = "0.14"
flate2 = "1.0"
rfd = "0.15"
walkdir = "2"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
byteorder = "1.5"
atty = "0.2"
which = "6.0"
egui = "0.28"
eframe = "0.28"
rayon = "1.10"

[target.'cfg(windows)'.dependencies]
libc = "0.2"

[lib]
name = "s4pi_reforged"
path = "src/lib.rs"

[[bin]]
name = "s4pi-reforged"
path = "src/main.rs"
